<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="Evènements liés au centre">

        <CheckBoxPreference
            android:key="global_events"
            android:title="@string/global_events"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="shop_status"
            android:title="@string/shop_status"
            android:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Evènements liés à vos catégories de magasin">

        <CheckBoxPreference
            android:key="flash_offers"
            android:title="@string/flash_offers"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="product_news"
            android:title="@string/product_news"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="sales"
            android:title="@string/sales"
            android:defaultValue="true"/>

    </PreferenceCategory>

</PreferenceScreen>